Patchlevel Xx (Xxx 20xx)

USER INTERFACE CHANGES:
	o Shift + Wheel Up pans left, Shift + Wheel Down pans right.
	  Alt or Meta + Wheel Up pops up the edit panel, Alt or Meta + Wheel
	  Down pops up the drawing panel. Previously, Shift + Wheel Up or Down
	  popped up the edit or drawing panel, respectively, and panning
	  sideways could only be achieved by moving the wheel sideways.

NEW FEATURES:
	o Obey the resolution given in embedded png, tiff and jpeg image files.
	o Embedded image files are displayed in full color, not reduced to
	  a maximum of 256 colors.
	o Display embedded pdf files.

BUGS FIXED:
	o Read version 1.3 fig files.
	o The default resolution of embedded raster images is changed
	  from 80 dpi to 72 dpi.
	o Read compressed files, but do not silently uncompress them.
	o Get correct bounding box (/MediaBox) of embedded pdf files.

-----------------------------------
Patchlevel 7b (Oct 2019)

NEW FEATURES:
	o New drawings in Electronic/Schematic library. Thanks to Niko Sauer.

BUGS FIXED:
	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
	o Fix core dump when clicking File -> Export. Ticket #45.
	o When exiting, cleanly pull down all windows. Ticket #54.
	o Adding and deleting arrows to arcs works, ticket #46.
	o Allow more than 100 comment lines, ticket #47.
	o Make `xfig -update' work again, would segfault.
	o Correctly draw interpolated splines, ticket #35.
	o Position points on grid, if appres.userspacing unequal 1. Ticket #31.

-----------------------------------
Patchlevel 7a (May 2018)

BUGS FIXED:
	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
	Debian bug numbers refer to https://bugs.debian.org/#.
	o Really fix ticket #9, debian bug #270113. When entering the "Open.."
	  dialog, moving to a new directory, pressing Cancel, a subsequent
	  "Save" placed the figure file into the new directory.

-----------------------------------
Patchlevel 7 (April 2018)

NEW FEATURES: